# CANController

./: .gitignore  CMakeLists.txt  Main.qml  main.cpp
include/: BleGattClient.h  BluetoothManager.h  ButtonManager.h  SDLController.h  SimpleBTDevice.h
qml/: FindDevicesScreen.qml
src/: BleGattClient.cpp  BluetoothManager.cpp  ButtonManager.cpp  SDLController.cpp
